@@ -122,17 +122,7 @@
     <Folder Include="MonoDevelop.ClassDesigner.Extensions\" />
     <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
     <Folder Include="MonoDevelop.ClassDesigner.Gui\MonoDevelop.ClassDesigner.Gui.Toolbox\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
     <Folder Include="MonoDevelop.ClassDesigner.Gui\MonoDevelop.ClassDesigner.Gui.PropertyPad\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
-    <Folder Include="MonoDevelop.ClassDesigner.Gui\" />
     <Folder Include="MonoDevelop.ClassDesigner.Gui\MonoDevelop.ClassDesigner.Dialogs\" />
     <Folder Include="MonoDevelop.ClassDesigner.Commands\" />
     <Folder Include="MonoDevelop.ClassDesigner.Visitor\" />
